--- a/nb/features.po
+++ b/nb/features.po
@@ -36,7 +36,7 @@ msgid ""
 "Delta Chat is a modern messenger. It is like email in a new dress. <br>Just "
 "better, safer and user-optimised."
 msgstr ""
-"Delta Chat er en moderne meldingsklient. Det er som en e-post i ny drakt. "
+"Delta Chat er en moderne meldingsklient. Det er som e-post i ny drakt. "
 "<br>Bare bedre, sikrere og brukeroptimisert."
 
 #: ../en/features.md:10
@@ -70,6 +70,16 @@ msgid ""
 "- Anonymous: **Metadata** like _Who_ communicates with _Whom_, _When_ and _Where_ is **not collected**\n"
 "- Dynamic: Delta Chat offers **group chats**"
 msgstr ""
+"- Meldingstjenesten med **størst rekkevidde i verden**: Enhver e-postklient på ethvert operativsystem er kompatibelt- Distribuert arkitektur: Det er **ingen sentral** Delta Chat **tjener**\n"
+"- Uavhengig: Du er **ikke avhengig** av noen ekstern tjeneste eller tjener - Delta Chat bruker din e-posttjener.\n"
+"- Din konto er uavhengig av et telefonnummer\n"
+"- Rask: **Push-meldinger** i løpet av sekunder - Raskt grensesnitt\n"
+"- Kraftig: **Ubegrenset** sludring, bilder, lydmeldinger og mer - Multiklient-kapabel\n"
+"- Gratis: Delta Chat vil alltid være: **Gratis** - Fri programvare - **Fri for reklame** - Kan brukes uten abonnement\n"
+"- Trygg: **Kryptert** med alle vanlige algoritmer - Åpent for vurderinger av kodebasen\n"
+"- Beskyttet: Delta Chat beskytter deg fra **søppelpost**\n"
+"- Lovlig: Din **telefonbok** forblir på din telefon - Den blir **ikke opplastet** annensteds hen .- Anonymt: **Metadata** som _Hvem_ som kommuniserer med _Hvem_, _Når_ og _Hvor_ blir **ikke innsamlet**\n"
+"- Dynamisk: Delta Chat tilbyr **gruppesludring**"
 
 #: ../en/features.md:30
 msgid ""
