--- a/es/download.po
+++ b/es/download.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 21:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: kaze kaze <kaze@rlab.be>, 2018\n"
 "Language-Team: Spanish (https://www.transifex.com/delta-chat/teams/76181/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +33,7 @@ msgstr "# Descargar e instalar Delta Chat"
 
 #: ../en/download.md:8
 msgid "**Delta Chat is currently under development**"
-msgstr ""
+msgstr "**Delta Chat esta actualmente en desarrollo**"
 
 #: ../en/download.md:10
 msgid ""
