--- a/nb/download.po
+++ b/nb/download.po
@@ -41,7 +41,7 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
-"En Androidversjon i beta-tilstand er tilgjengelig på F-Droid. Etter [versjon 1.0-milepælen](https://github.com/deltachat/deltachat-android/milestone/1) vil tilgjengelighet på i Google Play-butikken følge.\n"
+"En Androidversjon i beta-tilstand er tilgjengelig på F-Droid. Etter [versjon 1.0-milepælen](https://github.com/deltachat/deltachat-android/milestone/1) vil tilgjengelighet i Google Play-butikken følge.\n"
 "Videre varianter for iOS, macOS, Linux|GNU og Windows er planlagt.\n"
 "Du kan aktivt [støtte](contribute) oss i utviklingen."
 
