--- a/pl/features.po
+++ b/pl/features.po
@@ -36,9 +36,8 @@ msgid ""
 "Delta Chat is a modern messenger. It is like email in a new dress. <br>Just "
 "better, safer and user-optimised."
 msgstr ""
-"Delta Chat to nowoczesny komunikator. To jest jak e-mail w nowym stroju. "
-"<br>Po prostu lepszy, bezpieczniejszy i zoptymalizowany pod kątem "
-"użytkownika."
+"Delta Chat to nowoczesny komunikator. Jest jak e-mail w nowym stroju. <br>Po"
+" prostu lepszy, bezpieczniejszy i zoptymalizowany pod kątem użytkownika."
 
 #: ../en/features.md:10
 msgid ""
@@ -73,15 +72,15 @@ msgid ""
 msgstr ""
 "- Delta Chat jest komunikatorem o **największej bazie użytkowników na świecie**: każdy klient poczty w dowolnym systemie operacyjnym jest kompatybilny\n"
 "- Rozproszona architektura: **nie ma centralnego** **serwera** Delta Chat\n"
-"- Niezależny: Nie jesteś **zależny** od żadnej zewnętrznej usługi lub serwera - Delta Chat używa tylko twojego serwera pocztowego.\n"
+"- Niezależny: Nie jesteś **zależny** od żadnej zewnętrznej usługi lub serwera - Delta Chat używa tylko twojego serwera pocztowego\n"
 "- Twoje konto jest niezależne od numeru telefonu komórkowego\n"
 "- Szybki: **Wiadomości push** w kilka sekund. Szybki interfejs\n"
 "- Potężny: **Nieograniczone** czaty, obrazy, filmy, wiadomości audio i wiele innych - obsługujący wielu klientów\n"
-"- Darmowy: Delta Chat zawsze będzie: **darmowy** - O otwartym kodzie źródłowym - **Bez reklam** - Bez abonamentu\n"
+"- Darmowy: Delta Chat zawsze będzie: **Darmowy** - O otwartym kodzie źródłowym - **Bez reklam** - Bez abonamentu\n"
 "- Bezpieczny: **Zaszyfrowany** za pomocą wszystkich typowych algorytmów - kod źródłowy otwarty do wglądu\n"
 "- Chroniony: Delta Chat chroni przed **spamem**\n"
 "- Legalny: twoja **książka telefoniczna** pozostaje na twoim smartfonie - nie jest **nigdzie** przesyłana\n"
-"Anonimowy: **Metadane** takie jak _Kto_ komunikuje się z _Kim_, _Kiedy_ i _Gdzie_ **nie są gromadzone**\n"
+"- Anonimowy: **Metadane** takie jak _Kto_ komunikuje się z _Kim_, _Kiedy_ i _Gdzie_ **nie są gromadzone**\n"
 "- Dynamiczny: Delta Chat oferuje **czaty grupowe**"
 
 #: ../en/features.md:30
