--- a/pl/help.po
+++ b/pl/help.po
@@ -84,24 +84,38 @@ msgid ""
 "- _Trustworthy_ - can even be used for business messages\n"
 "- fully _Open Source_ and _Standards_ based"
 msgstr ""
+"- _Niezależny_ od jakiejkolwiek firmy lub usług. _Jesteś_ właścicielem swoich danych.\n"
+"- Twoje dane nie są zapisywane na centralnym serwerze; w ten sposób, w przeciwieństwie do większości innych komunikatorów, Delta Chat nawet chroni twoje metadane (kto do kogo pisze?)\n"
+"- Nie udostępniasz nikomu swojej książki adresowej.\n"
+"- _Szybki_ dzięki użyciu Push-IMAP\n"
+"- _Największa baza użytkowników_ - możesz rozmawiać nawet z tymi, którzy _nie_ posiadają Delta Chat\n"
+"- _Zgodny_ - nie tylko z samym sobą\n"
+"-  _Elegancki_ i _prosty_ interfejs użytkownika\n"
+"- _Rozproszony_ system\n"
+"- _Brak spamu_ - domyślnie wyświetlane są, tylko wiadomości znanych użytkowników\n"
+"- _Niezawodny_ - bezpieczny do użytku profesjonalnego\n"
+"- _Godny zaufania_ - może być wykorzystywany nawet do wiadomości biznesowych\n"
+"- W pełni _otwarto-źródłowy_ i _oparty na standardach_"
 
 #: ../en/help.md:35
 msgid "## What if the receiver does not use Delta Chat?"
-msgstr ""
+msgstr "## Co jeśli odbiorca nie używa Delta Chat?"
 
 #: ../en/help.md:37
 msgid ""
 "- The receiver will get a normal email then - if he replies to it, you will "
 "see the reply in the Delta Chat app."
 msgstr ""
+"- Odbiorca otrzyma normalny e-mail - jeśli odpowie na niego, zobaczysz "
+"odpowiedź w aplikacji Delta Chat."
 
 #: ../en/help.md:39
 msgid "## Which messages do appear in Delta Chat?"
-msgstr ""
+msgstr "## Jakie wiadomości pojawiają się w Delta Chat?"
 
 #: ../en/help.md:41
 msgid "Delta Chat automatically shows ..."
-msgstr ""
+msgstr "Delta Chat automatycznie pokazuje"
 
 #: ../en/help.md:43
 msgid ""
@@ -109,6 +123,9 @@ msgid ""
 "- Messages from contacts **contacted by you**\n"
 "- **Replies** to messages send by you"
 msgstr ""
+"- Wiadomości od kontaktów z **książki adresowej**\n"
+"- Wiadomości od kontaktów, z którymi **się kontaktujesz**\n"
+"- **Odpowiedzi** na wiadomości wysyłane przez ciebie"
 
 #: ../en/help.md:47
 msgid ""
@@ -116,10 +133,13 @@ msgid ""
 "in the main menu at **Contact requests** and, if desired, start a chat from "
 "there."
 msgstr ""
+"Inne wiadomości nie pojawią się automatycznie. Możesz je zobaczyć w menu "
+"głównym w **Skrzynka pocztowa** i, jeśli chcesz, rozpocząć czat z tego "
+"miejsca."
 
 #: ../en/help.md:49
 msgid "## What about Spam?"
-msgstr ""
+msgstr "## A co ze spamem?"
 
 #: ../en/help.md:51
 msgid ""
@@ -127,10 +147,13 @@ msgid ""
 "- As messages from unknown contacts do not pop up automatically, normally, there's **no spam**.\n"
 "- However, if really needed, you can **block** any contact."
 msgstr ""
+"- Wiadomości w popularnych folderach ze spamem są ignorowane, a zawarte adresy nie są uznawane za znane kontakty.\n"
+"- Ponieważ wiadomości z nieznanych kontaktów nie pojawiają się automatycznie, zwykle **nie ma spamu **.\n"
+"- Jednakże, jeśli naprawdę potrzebujesz, możesz **zablokować** dowolny kontakt. "
 
 #: ../en/help.md:55
 msgid "## Does Delta Chat support images, videos and other attachments?"
-msgstr ""
+msgstr "## Czy Delta Chat obsługuje obrazy, filmy i inne załączniki?"
 
 #: ../en/help.md:57
 msgid ""
@@ -138,16 +161,22 @@ msgid ""
 "separate messages. Outgoing messages will get attachments as needed "
 "automatically."
 msgstr ""
+"- Tak. Oprócz zwykłego tekstu, wszystkie załączniki wiadomości e-mail są "
+"wyświetlane jako oddzielne wiadomości. Wiadomości wychodzące będą "
+"automatycznie pobierać załączniki."
 
 #: ../en/help.md:59
 msgid "## Does Delta Chat support HTML-emails?"
-msgstr ""
+msgstr "## Czy Delta Chat obsługuje wiadomości e-mail w formacie HTML?"
 
 #: ../en/help.md:61
 msgid ""
 "- Yes. If incoming email lacks a plain text part, we convert HTML-emails to "
 "plain text ourselves. Outgoing emails always use plain text."
 msgstr ""
+"- Tak. Jeśli przychodząca wiadomość e-mail nie ma części tekstowej, "
+"konwertujemy wiadomości HTML na zwykły tekst. E-maile wychodzące zawsze "
+"używają zwykłego tekstu."
 
 #: ../en/help.md:63
 msgid "# Groups"
@@ -155,7 +184,7 @@ msgstr "# Grupy"
 
 #: ../en/help.md:65
 msgid "## How can I create a group?"
-msgstr ""
+msgstr "## Jak mogę utworzyć grupę?"
 
 #: ../en/help.md:67
 msgid ""
@@ -163,20 +192,25 @@ msgid ""
 "- On the following screen, select the **group members** and hit the check mark in the upper right corner. After that, you can define a **group name**.\n"
 "- As soon as you write the **first message** in the group, all members are informed about the new group and can answer in the group (as long as you do not write a message in the group the group is invisible to the members)."
 msgstr ""
+"- Na ekranie przeglądu czatów, z menu w prawym górnym rogu wybierz **Nowa grupa**.\n"
+"- Na następnym ekranie wybierz **członków grupy** i naciśnij znacznik wyboru w prawym górnym rogu. Następnie możesz zdefiniować nazwę grupy.\n"
+"- Zaraz po napisaniu pierwszej wiadomości w grupie wszyscy członkowie zostaną poinformowani o nowej grupie i mogą odpowiedzieć w grupie (jeżeli nie napiszesz wiadomości w grupie, grupa jest niewidoczna dla członków)."
 
 #: ../en/help.md:71
 msgid "## Who can add members to a group?"
-msgstr ""
+msgstr "## Kto może dodawać członków do grupy?"
 
 #: ../en/help.md:73
 msgid ""
 "- Every group member has the **same rights** as any other. For this reason every one can delete every member or add new ones.\n"
 "- To add or delete members, click on the group name in the chat."
 msgstr ""
+"- Każdy członek grupy ma **takie same prawa** jak każdy inny. Z tego powodu każdy może usunąć każdego członka lub dodać nowego.\n"
+"- Aby dodać lub usunąć członków, kliknij nazwę grupy na czacie. "
 
 #: ../en/help.md:76
 msgid "## I have deleted myself by accident."
-msgstr ""
+msgstr "## Usunąłem się przez przypadek."
 
 #: ../en/help.md:78
 msgid ""
@@ -184,16 +218,21 @@ msgid ""
 "However, no problem, just ask any other group member in a normal chat to add"
 " you again."
 msgstr ""
+"- Ponieważ nie jesteś już członkiem grupy, nie możesz dodać siebie ponownie."
+" Jednak nie ma problemu, po prostu poproś dowolnego członka grupy na "
+"normalnym czacie, aby dodał cię ponownie."
 
 #: ../en/help.md:80
 msgid "## I do not want to receive the messages of a group any longer."
-msgstr ""
+msgstr "## Nie chcę już otrzymywać wiadomości od grupy."
 
 #: ../en/help.md:82
 msgid ""
 "- Either delete yourself from the member list or delete the whole chat. If you want to join the group later again, ask another group member to add you again.\n"
 "- As an alternative, you can also \"Mute\" a group - doing so, you'll get all messages and can still write but you're no longer notified of any new messages."
 msgstr ""
+"- Usuń siebie z listy członków lub usuń cały czat. Jeśli później będziesz chciał ponownie dołączyć do grupy, poproś innego członka grupy, aby dodał cię do grupy.\n"
+"- Alternatywnie możesz też \"Wyłączyć powiadomienia\" dla grupy - dzięki temu otrzymasz wszystkie wiadomości i nadal będziesz mógł pisać, ale nie będziesz już otrzymywać powiadomień o nowych wiadomościach."
 
 #: ../en/help.md:85
 msgid "# Encryption {#encryption}"
@@ -201,7 +240,7 @@ msgstr "# Szyfrowanie {#encryption}"
 
 #: ../en/help.md:87
 msgid "## Does Delta Chat have an end-to-end-encryption?"
-msgstr ""
+msgstr "## Czy Delta Chat ma szyfrowanie end-to-end?"
 
 #: ../en/help.md:89
 msgid "- Yes."
@@ -209,7 +248,7 @@ msgstr "- Tak."
 
 #: ../en/help.md:91
 msgid "## What do I have to do to activate the end-to-end-encryption?"
-msgstr ""
+msgstr "## Co muszę zrobić, aby aktywować szyfrowanie end-to-end?"
 
 #: ../en/help.md:93
 msgid "- Nothing."
@@ -224,71 +263,96 @@ msgid ""
 "later that cannot use end-to-end-encryption, it is paused for this time and "
 "automatically re-activated as soon as possible."
 msgstr ""
+"- Gdy wysyłane są pierwsze wiadomości Delta Chat (i inne programy pocztowe "
+"kompatybilne z [Autocrypt](https://autocrypt.org)-compatible email-programs)"
+" automatycznie udostępniają klucze wymagane do automatycznego szyfrowania "
+"end-to-end. Następnie wszystkie kolejne wiadomości są automatycznie "
+"szyfrowane end-to-end. Jeśli jeden z partnerów czatu użyje później "
+"aplikacji, która nie może korzystać z szyfrowania typu end-to-end, zostanie "
+"ona na ten czas wstrzymana i automatycznie ponownie aktywowana tak szybko, "
+"jak to będzie możliwe."
 
 #: ../en/help.md:97
 msgid ""
 "- If you want to _deactivate_ the end-to-end-encryption, use the "
 "corresponding setting at \"Settings / Advanced settings\"."
 msgstr ""
+"- Jeśli chcesz _dezaktywować_ szyfrowanie end-to-end, użyj odpowiedniego "
+"ustawienia w \"Ustawienia  Ustawienia zaawansowane\"."
 
 #: ../en/help.md:99
 msgid ""
 "## If end-to-end-encryption is not available, is the connection not "
 "encrypted at all?"
 msgstr ""
+"## Czy połączenie nie jest w ogóle szyfrowane jeśli szyfrowanie end-to-end "
+"nie jest dostępne?"
 
 #: ../en/help.md:101
 msgid "- No. The normal, email-standard _transport encryption_ is used then."
 msgstr ""
+"- Nie. Używa się wtedy zwykłego standardowego _szyfrowania transportu_ "
+"poczty e-mail."
 
 #: ../en/help.md:104
 msgid "## How can I check the encryption?"
-msgstr ""
+msgstr "## Jak mogę sprawdzić szyfrowanie?"
 
 #: ../en/help.md:106
 msgid ""
 "- If a little **padlock** is shown beside a message, this implies that the message is end-to-end-encrypted _and_ is send from the given sender _and_ your answer will be end-to-end-encrypted as well.\n"
 "- If there is **no padlock**, the message is usually transport encrypted eg. because you or the sender have disabled end-to-end-encryption or the sender uses an app that does not support end-to-end-encryption."
 msgstr ""
+"- Jeśli obok wiadomości pojawi się mała **kłódka**, oznacza to, że wiadomość jest szyfrowana metodą end-to-end _i_ jest wysłana od danego nadawcy _i_ twoja odpowiedź będzie również szyfrowana metodą end-to-end.\n"
+"- Jeśli **nie ma kłódki**, wiadomość używa zwykłego szyfrowania transportu, np. ponieważ ty lub nadawca wyłączyliście szyfrowanie metodą end-to-end lub gdy nadawca używa aplikacji, która nie obsługuje szyfrowania metodą end-to-end."
 
 #: ../en/help.md:110
 msgid "## How can I verify the sender?"
-msgstr ""
+msgstr "## Jak mogę zweryfikować nadawcę?"
 
 #: ../en/help.md:112
 msgid "The user's profile shows some additional information:"
-msgstr ""
+msgstr "Profil użytkownika zawiera dodatkowe informacje:"
 
 #: ../en/help.md:114
 msgid ""
 "- For an end-to-end-encryption, Delta Chat show two fingerprints there. If they are the same on the device of your chat partner, the connection is safe.\n"
 "- For transport encryption, this state is just shown there"
 msgstr ""
+"- W przypadku szyfrowania metodą end-to-end, Delta Chat pokazuje tam dwa odciski palców. Jeśli są takie same na urządzeniu twojego partnera czatu, połączenie jest bezpieczne.\n"
+"- W przypadku szyfrowania transportu ten stan jest właśnie tam wyświetlany"
 
 #: ../en/help.md:118
 msgid "## Which standards are used for end-to-end-encryption?"
-msgstr ""
+msgstr "## Jakie standardy są używane do szyfrowania end-to-end?"
 
 #: ../en/help.md:120
 msgid ""
 "- OpenPGP. Key transport is done via [Autocrypt](https://autocrypt.org)."
 msgstr ""
+"- OpenPGP. Transport kluczy odbywa się za pomocą "
+"[Autocrypt](https://autocrypt.org)."
 
 #: ../en/help.md:122
 msgid "## Can I re-use by existing private key?"
-msgstr ""
+msgstr "## Czy mogę ponownie wykorzystać istniejący klucz prywatny?"
 
 #: ../en/help.md:124
 msgid ""
 "- Yes. Importing it at \"Advanced settings / Manage private keys\". Caution:"
 " Make sure, they key is not protected by a password or remove it before."
 msgstr ""
+"- Tak. Zaimportujesz go w \"Ustawienia zaawansowane » Zarządzaj prywatnymi "
+"kluczami\". Uwaga: Upewnij się, że klucz nie jest chroniony hasłem ani nie "
+"usunąłeś go wcześniej."
 
 #: ../en/help.md:126
 msgid ""
 "If you don't have a key or don't even know you would need one - don't worry:"
 " Delta Chat generates one as needed, you have to do nothing."
 msgstr ""
+"Jeśli nie masz klucza lub nawet nie wiesz, że go potrzebujesz - nie przejmuj"
+" się: Delta Chat generuje go w razie potrzeby, nie musisz nic robić."
 
 #: ../en/help.md:128
 msgid "# Multi-client {#multiclient}"
@@ -297,12 +361,15 @@ msgstr "# Multi-klient {#multiclient}"
 #: ../en/help.md:130
 msgid "## Can I use Delta Chat on multiple devices the same time?"
 msgstr ""
+"## Czy mogę korzystać z Delta Chat na wielu urządzeniach w tym samym czasie?"
 
 #: ../en/help.md:132
 msgid ""
 "- If you want to use the **same account** on different devices, you have to "
 "make sure, all devices use the same keys for encryption:"
 msgstr ""
+"- Jeśli chcesz używać tego samego konta na różnych urządzeniach, upewnij "
+"się, że wszystkie urządzenia używają tych samych kluczy do szyfrowania:"
 
 #: ../en/help.md:134
 msgid ""
@@ -310,12 +377,17 @@ msgid ""
 "  - Via USB, copy the key file from the \"Downloads\" directory of the first device to the second one.\n"
 "  - On the second device, \"Advanced settings / Manage private keys / Import key from Downloads\""
 msgstr ""
+"- Na pierwszym urządzeniu wybierz \"Ustawienia zaawansowane » Zarządzaj prywatnymi kluczami » Eksportuj prywatne klucze\"\n"
+"- Np. przez USB, skopiuj plik klucza z katalogu \"Pobrane\" pierwszego urządzenia do drugiego.\n"
+"- Na drugim urządzeniu \"Ustawienia zaawansowane / Zarządzaj prywatnymi kluczami » Importuj prywatne klucze\" "
 
 #: ../en/help.md:138
 msgid ""
 "- All this is **not needed** for the standard usage of Delta Chat using just"
 " one device."
 msgstr ""
+"- Wszystko to, nie jest potrzebne do standardowego korzystania z Delta Chat "
+"przy użyciu tylko jednego urządzenia."
 
 #: ../en/help.md:140
 msgid ""
@@ -323,6 +395,10 @@ msgid ""
 "clients. _Outgoing_ messages are synced about two times an hour. We can "
 "improve this, but we would need more [support](contribute) on this issue."
 msgstr ""
+"- UWAGA: W trybie wielu klientów wiadomości _przychodzące_ są wyświetlane "
+"jednocześnie na wszystkich klientach. Wiadomości _wychodzące_ są "
+"synchronizowane około dwa razy na godzinę. Możemy to poprawić, ale "
+"potrzebowalibyśmy większego [wsparcia](contribute) w tej kwestii."
 
 #: ../en/help.md:143
 msgid "# Miscellaneous"
@@ -330,7 +406,7 @@ msgstr "# Różne"
 
 #: ../en/help.md:145
 msgid "## Delta Chat on Linux Desktop"
-msgstr ""
+msgstr "## Delta Chat na pulpicie Linuxa"
 
 #: ../en/help.md:147
 msgid ""
@@ -338,10 +414,13 @@ msgid ""
 "distributions supporting the **snap**-package format) by simply installing "
 "[Anbox](https://anbox.io) (Android in a Box) from terminal:"
 msgstr ""
+"- Możesz uruchomić Delta Chat na pulpicie Ubuntu Linux (lub innych "
+"dystrybucjach Linuksa obsługujących format **snap**-package), po prostu "
+"instalując  [Anbox](https://anbox.io) (Android in a Box) z terminala:"
 
 #: ../en/help.md:149
 msgid "  $ *sudo snap install \\-\\-classic anbox-installer && anbox-installer*"
-msgstr ""
+msgstr "  $ *sudo snap install \\-\\-classic anbox-installer && anbox-installer*"
 
 #: ../en/help.md:151
 msgid ""
@@ -349,15 +428,18 @@ msgid ""
 "*com.b44t.messenger_\\<version\\>.apk* file from [this](download) page and "
 "install it from terminal:"
 msgstr ""
+"- Aby dodać aplikację Delta Chat, pobierz plik "
+"*com.b44t.messenger_\\<wersja\\>.apk* z [tej](download) strony i zainstaluj "
+"go z terminala:"
 
 #: ../en/help.md:153
 msgid "  $ *adb install path/to/com.b44t.messenger_\\<version\\>.apk*"
-msgstr ""
+msgstr "  $ *adb install path/to/com.b44t.messenger_\\<wersja\\>.apk*"
 
 #: ../en/help.md:155
 msgid ""
 "  adb is the Android Debug Bridge and can be installed from repository."
-msgstr ""
+msgstr "adb to Android Debug Bridge i można go zainstalować z repozytorium."
 
 #: ../en/help.md:157
 msgid ""
@@ -367,26 +449,35 @@ msgid ""
 "information about updates and the migration of existing config and chat "
 "data."
 msgstr ""
+"- Zamiast instalować Delta Chat bezpośrednio przez plik APK, możesz najpierw"
+" zainstalować sklep F-Droid przez[F-Droid-"
+"APK](https://f-droid.org/FDroid.apk), a następnie zainstalować Delta Chat "
+"przy użyciu sklepu. Ogromną korzyścią są informacje o aktualizacjach i "
+"migracji istniejących danych konfiguracyjnych i czatów."
 
 #: ../en/help.md:160
 msgid "## Login Issues"
-msgstr ""
+msgstr "## Problemy z logowaniem"
 
 #: ../en/help.md:162
 msgid "I have a problem with ..."
-msgstr ""
+msgstr "Mam problem z"
 
 #: ../en/help.md:164
 msgid ""
 "- Gmail: Enable \"Support less secure apps\" and IMAP, you may receive a "
 "mail to grant permission"
 msgstr ""
+"- Gmail: włącz \"Zezwalaj na mniej bezpieczne aplikacje\" i IMAP, możesz "
+"otrzymać wiadomość e-mail, aby udzielić pozwolenia"
 
 #: ../en/help.md:166
 msgid "## I'm interested in the technical details. Can you tell me more?"
-msgstr ""
+msgstr "## Interesują mnie szczegóły techniczne. Możesz powiedzieć mi więcej?"
 
 #: ../en/help.md:168
 msgid ""
 "- See page [Standards used in Delta Chat]({% include standards-url %})."
 msgstr ""
+"- Zobacz stronę [Standardy używane w Delta Chat]({% include standards-url "
+"%})."
