--- a/pl/help.po
+++ b/pl/help.po
@@ -115,7 +115,7 @@ msgstr "## Jakie wiadomości pojawiają się w Delta Chat?"
 
 #: ../en/help.md:41
 msgid "Delta Chat automatically shows ..."
-msgstr "Delta Chat automatycznie pokazuje"
+msgstr "Delta Chat automatycznie pokazuje:"
 
 #: ../en/help.md:43
 msgid ""
@@ -161,7 +161,7 @@ msgid ""
 "separate messages. Outgoing messages will get attachments as needed "
 "automatically."
 msgstr ""
-"- Tak. Oprócz zwykłego tekstu, wszystkie załączniki wiadomości e-mail są "
+"- Tak. Oprócz zwykłego tekstu wszystkie załączniki wiadomości e-mail są "
 "wyświetlane jako oddzielne wiadomości. Wiadomości wychodzące będą "
 "automatycznie pobierać załączniki."
 
@@ -232,7 +232,7 @@ msgid ""
 "- As an alternative, you can also \"Mute\" a group - doing so, you'll get all messages and can still write but you're no longer notified of any new messages."
 msgstr ""
 "- Usuń siebie z listy członków lub usuń cały czat. Jeśli później będziesz chciał ponownie dołączyć do grupy, poproś innego członka grupy, aby dodał cię do grupy.\n"
-"- Alternatywnie możesz też \"Wyłączyć powiadomienia\" dla grupy - dzięki temu otrzymasz wszystkie wiadomości i nadal będziesz mógł pisać, ale nie będziesz już otrzymywać powiadomień o nowych wiadomościach."
+"- Alternatywnie możesz też „Wyłączyć powiadomienia” dla grupy - dzięki temu otrzymasz wszystkie wiadomości i nadal będziesz mógł pisać, ale nie będziesz już otrzymywać powiadomień o nowych wiadomościach."
 
 #: ../en/help.md:85
 msgid "# Encryption {#encryption}"
@@ -264,13 +264,12 @@ msgid ""
 "automatically re-activated as soon as possible."
 msgstr ""
 "- Gdy wysyłane są pierwsze wiadomości Delta Chat (i inne programy pocztowe "
-"kompatybilne z [Autocrypt](https://autocrypt.org)-compatible email-programs)"
-" automatycznie udostępniają klucze wymagane do automatycznego szyfrowania "
-"end-to-end. Następnie wszystkie kolejne wiadomości są automatycznie "
-"szyfrowane end-to-end. Jeśli jeden z partnerów czatu użyje później "
-"aplikacji, która nie może korzystać z szyfrowania typu end-to-end, zostanie "
-"ona na ten czas wstrzymana i automatycznie ponownie aktywowana tak szybko, "
-"jak to będzie możliwe."
+"kompatybilne z [Autocrypt](https://autocrypt.org) - Test It!) automatycznie "
+"udostępniają klucze wymagane do automatycznego szyfrowania end-to-end. "
+"Następnie wszystkie kolejne wiadomości są automatycznie szyfrowane end-to-"
+"end. Jeśli jeden z partnerów czatu użyje później aplikacji, która nie może "
+"korzystać z szyfrowania typu end-to-end, zostanie ona na ten czas wstrzymana"
+" i automatycznie ponownie aktywowana tak szybko, jak to będzie możliwe."
 
 #: ../en/help.md:97
 msgid ""
@@ -278,14 +277,14 @@ msgid ""
 "corresponding setting at \"Settings / Advanced settings\"."
 msgstr ""
 "- Jeśli chcesz _dezaktywować_ szyfrowanie end-to-end, użyj odpowiedniego "
-"ustawienia w \"Ustawienia  Ustawienia zaawansowane\"."
+"ustawienia w „Ustawienia » Ustawienia zaawansowane”."
 
 #: ../en/help.md:99
 msgid ""
 "## If end-to-end-encryption is not available, is the connection not "
 "encrypted at all?"
 msgstr ""
-"## Czy połączenie nie jest w ogóle szyfrowane jeśli szyfrowanie end-to-end "
+"## Czy połączenie nie jest w ogóle szyfrowane, jeśli szyfrowanie end-to-end "
 "nie jest dostępne?"
 
 #: ../en/help.md:101
@@ -304,7 +303,7 @@ msgid ""
 "- If there is **no padlock**, the message is usually transport encrypted eg. because you or the sender have disabled end-to-end-encryption or the sender uses an app that does not support end-to-end-encryption."
 msgstr ""
 "- Jeśli obok wiadomości pojawi się mała **kłódka**, oznacza to, że wiadomość jest szyfrowana metodą end-to-end _i_ jest wysłana od danego nadawcy _i_ twoja odpowiedź będzie również szyfrowana metodą end-to-end.\n"
-"- Jeśli **nie ma kłódki**, wiadomość używa zwykłego szyfrowania transportu, np. ponieważ ty lub nadawca wyłączyliście szyfrowanie metodą end-to-end lub gdy nadawca używa aplikacji, która nie obsługuje szyfrowania metodą end-to-end."
+"- Jeśli **nie ma kłódki**, wiadomość używa zwykłego szyfrowania transportu, np. ponieważ ty lub nadawca wyłączyliście szyfrowanie metodą end-to-end, lub gdy nadawca używa aplikacji, która nie obsługuje szyfrowania metodą end-to-end."
 
 #: ../en/help.md:110
 msgid "## How can I verify the sender?"
@@ -319,7 +318,7 @@ msgid ""
 "- For an end-to-end-encryption, Delta Chat show two fingerprints there. If they are the same on the device of your chat partner, the connection is safe.\n"
 "- For transport encryption, this state is just shown there"
 msgstr ""
-"- W przypadku szyfrowania metodą end-to-end, Delta Chat pokazuje tam dwa odciski palców. Jeśli są takie same na urządzeniu twojego partnera czatu, połączenie jest bezpieczne.\n"
+"- W przypadku szyfrowania metodą end-to-end Delta Chat pokazuje tam dwa odciski palców. Jeśli są takie same na urządzeniu twojego partnera czatu, połączenie jest bezpieczne\n"
 "- W przypadku szyfrowania transportu ten stan jest właśnie tam wyświetlany"
 
 #: ../en/help.md:118
@@ -342,8 +341,8 @@ msgid ""
 "- Yes. Importing it at \"Advanced settings / Manage private keys\". Caution:"
 " Make sure, they key is not protected by a password or remove it before."
 msgstr ""
-"- Tak. Zaimportujesz go w \"Ustawienia zaawansowane » Zarządzaj prywatnymi "
-"kluczami\". Uwaga: Upewnij się, że klucz nie jest chroniony hasłem ani nie "
+"- Tak. Zaimportujesz go w „Ustawienia zaawansowane » Zarządzaj prywatnymi "
+"kluczami”. Uwaga: Upewnij się, że klucz nie jest chroniony hasłem ani nie "
 "usunąłeś go wcześniej."
 
 #: ../en/help.md:126
@@ -377,9 +376,9 @@ msgid ""
 "  - Via USB, copy the key file from the \"Downloads\" directory of the first device to the second one.\n"
 "  - On the second device, \"Advanced settings / Manage private keys / Import key from Downloads\""
 msgstr ""
-"- Na pierwszym urządzeniu wybierz \"Ustawienia zaawansowane » Zarządzaj prywatnymi kluczami » Eksportuj prywatne klucze\"\n"
-"- Np. przez USB, skopiuj plik klucza z katalogu \"Pobrane\" pierwszego urządzenia do drugiego.\n"
-"- Na drugim urządzeniu \"Ustawienia zaawansowane / Zarządzaj prywatnymi kluczami » Importuj prywatne klucze\" "
+"- Na pierwszym urządzeniu wybierz „Ustawienia zaawansowane » Zarządzaj prywatnymi kluczami » Eksportuj prywatne klucze”\n"
+"- Np. przez USB, skopiuj plik klucza z katalogu „Pobrane” pierwszego urządzenia do drugiego.\n"
+"- Na drugim urządzeniu „Ustawienia zaawansowane » Zarządzaj prywatnymi kluczami » Importuj prywatne klucze”"
 
 #: ../en/help.md:138
 msgid ""
@@ -450,7 +449,7 @@ msgid ""
 "data."
 msgstr ""
 "- Zamiast instalować Delta Chat bezpośrednio przez plik APK, możesz najpierw"
-" zainstalować sklep F-Droid przez[F-Droid-"
+" zainstalować sklep F-Droid przez [F-Droid-"
 "APK](https://f-droid.org/FDroid.apk), a następnie zainstalować Delta Chat "
 "przy użyciu sklepu. Ogromną korzyścią są informacje o aktualizacjach i "
 "migracji istniejących danych konfiguracyjnych i czatów."
@@ -468,7 +467,7 @@ msgid ""
 "- Gmail: Enable \"Support less secure apps\" and IMAP, you may receive a "
 "mail to grant permission"
 msgstr ""
-"- Gmail: włącz \"Zezwalaj na mniej bezpieczne aplikacje\" i IMAP, możesz "
+"- Gmail: włącz „Zezwalaj na mniej bezpieczne aplikacje” i IMAP, możesz "
 "otrzymać wiadomość e-mail, aby udzielić pozwolenia"
 
 #: ../en/help.md:166
