--- a/pl/features.po
+++ b/pl/features.po
@@ -89,6 +89,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
-"Dalsze powody i motywacje można znaleźć w poście na blogu [Delta sprawia, że"
-" czat jest lepszy](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
+"Dalsze powody i motywacje można znaleźć w poście na blogu, [Delta sprawia, "
+"że czat jest lepszy](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
