--- a/de/help.po
+++ b/de/help.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 21:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Johannes Schneider <java@neshanjo.de>, 2018\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -449,17 +449,19 @@ msgstr ""
 
 #: ../en/help.md:160
 msgid "## Login Issues"
-msgstr ""
+msgstr "## Login-Probleme"
 
 #: ../en/help.md:162
 msgid "I have a problem with ..."
-msgstr ""
+msgstr "Ich habe Probleme mit ..."
 
 #: ../en/help.md:164
 msgid ""
 "- Gmail: Enable \"Support less secure apps\" and IMAP, you may receive a "
 "mail to grant permission"
 msgstr ""
+"- Gmail: Aktivieren Sie \"Weniger sicheren Apps die Verwendung Ihres Kontos "
+"gestatten\" und IMAP."
 
 #: ../en/help.md:166
 msgid "## I'm interested in the technical details. Can you tell me more?"
